--- a/link-up/package.json
+++ b/link-up/package.json
@@ -3,14 +3,33 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-transform-class-properties": "^7.27.1",
+    "@babel/plugin-transform-nullish-coalescing-operator": "^7.27.1",
+    "@babel/plugin-transform-numeric-separator": "^7.27.1",
+    "@babel/plugin-transform-optional-chaining": "^7.27.1",
+    "@babel/plugin-transform-private-methods": "^7.27.1",
+    "@babel/plugin-transform-private-property-in-object": "^7.27.1",
+    "@eslint/config-array": "^0.20.0",
+    "@eslint/object-schema": "^2.1.6",
+    "@rollup/plugin-terser": "^0.4.4",
     "@supabase/auth-helpers-react": "^0.5.0",
-    "@supabase/supabase-js": "^2.48.1",
+    "@supabase/supabase-js": "^2.49.4",
+    "@svgr/plugin-svgo": "^8.1.0",
+    "@svgr/webpack": "^8.1.0",
+    "braces": "^3.0.3",
     "cra-template": "1.2.0",
+    "eslint": "^9.26.0",
+    "loader-utils": "^3.3.1",
+    "postcss": "^8.4.31",
     "react": "^19.0.0",
     "react-date-picker": "^11.0.0",
     "react-datetime-picker": "^6.0.1",
     "react-dom": "^19.0.0",
     "react-scripts": "^5.0.1",
+    "resolve-url-loader": "^5.0.0",
+    "rimraf": "^6.0.1",
+    "shell-quote": "^1.8.2",
+    "svgo": "^3.3.2",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
@@ -36,5 +55,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "overrides": {
+  "nth-check": "^2.1.1",
+  "postcss": "^8.4.31"
+}
 }
